--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,5 +4,14 @@
   "language": "Language",
   "accessibilityMode": "Accessibility Mode",
   "notifications": "Notifications",
-  "logout": "Logout"
+  "logout": "Logout",
+  "textToSpeech": "Text-to-speech",
+  "largeText": "Large Text",
+  "autoSubtitle": "Automatic Subtitles",
+  "highContrast": "High Contrast Mode",
+  "notification": "Notifications",
+  "taskNotification": "New Task",
+  "announcement": "Announcements",
+  "reminderNotification": "Schedule Reminder"
+
 }
