--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -4,5 +4,14 @@
   "language": "Bahasa",
   "accessibilityMode": "Mode Aksesibilitas",
   "notifications": "Notifikasi",
-  "logout": "Keluar"
+  "logout": "Keluar",
+  "textToSpeech": "Text-to-speech",
+  "largeText": "Teks Besar",
+  "autoSubtitle": "Subtitle Otomatis",
+  "highContrast": "Mode Kontras Tinggi",
+  "notification": "Notifikasi",
+  "taskNotification": "Tugas Baru",
+  "announcement": "Pengumuman",
+  "reminderNotification": "Pengingat Jadwal"
+
 }
