--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,6 +18,7 @@
   "editProfile": "Edit Profile",
   "role": "Role",
   "parent": "Parent",
+  "student": "Student",
   "institution": "Institution",
   "publicHighSchool": "Public High School",
   "notificationSettings": "Notification Settings",
